src/plugins/screencast/windowscreencastsource.cpp
@@ -75,11 +75,11 @@ void WindowScreenCastSource::render(GLFramebuffer *target)
     RenderTarget renderTarget(target);
     RenderViewport viewport(m_window->clientGeometry(), 1, renderTarget);
 
-    GLFramebuffer::pushFramebuffer(target);
+    Compositor::self()->scene()->renderer()->beginFrame(renderTarget, viewport);
     glClearColor(0.0, 0.0, 0.0, 0.0);
     glClear(GL_COLOR_BUFFER_BIT);
     Compositor::self()->scene()->renderer()->renderItem(renderTarget, viewport, m_window->windowItem(), Scene::PAINT_WINDOW_TRANSFORMED, infiniteRegion(), WindowPaintData{});
-    GLFramebuffer::popFramebuffer();
+    Compositor::self()->scene()->renderer()->endFrame();
 }
 
 std::chrono::nanoseconds WindowScreenCastSource::clock() const
